--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.0",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@t3-oss/env-nextjs": "^0.2.1",
@@ -18,6 +21,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "framer-motion": "^4.1.17",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
@@ -34,6 +38,7 @@
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
+    "esm": "^3.2.25",
     "prisma": "^4.11.0",
     "typescript": "^5.0.2"
   },
